--- a/_styles/main.scss
+++ b/_styles/main.scss
@@ -6,3 +6,10 @@ main {
   flex-direction: column;
   flex-grow: 1;
 }
+
+body {
+    background-image: url('https://ecomplab.com/images/background_dalle.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
