--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en" data-dark="false">
   {% include head.html %}
   <body>
+    <div class="site-background"></div> <!-- Background image div -->
     {% include header.html %}
     <main>
       {% include content.html content=content %}
